# FueGo

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  launch_server.sh  start_go.sh
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
book/: Makefile  Makefile.in
dnnmain/: DnnEngine.cpp  DnnEngine.h  DnnMain.cpp  Makefile  Makefile.am  Makefile.in  dnnmain
dnnmain/.deps/: dnnmain-DnnEngine.Po  dnnmain-DnnMain.Po
features/: Makefile  Makefile.in
features/.deps/: libfuego_features_a-FeBasicFeatures.Po  libfuego_features_a-FeFeatureWeights.Po  libfuego_features_a-FeNestedPattern.Po  libfuego_features_a-FePattern.Po  libfuego_features_a-FePatternBase.Po
fuegomain/: FuegoMain.cpp  FuegoMainEngine.cpp  Makefile  Makefile.am  Makefile.in
fuegomain/.deps/: fuego-FuegoMain.Po  fuego-FuegoMainEngine.Po  fuego-FuegoMainUtil.Po
fuegotest/: FuegoTestMain.cpp  Makefile  Makefile.am  Makefile.in  fuego_test
fuegotest/.deps/: fuego_test-FuegoTestEngine.Po  fuego_test-FuegoTestMain.Po
go/: .GoSearch.cpp.swp  GoBoard.cpp  GoBoard.h  GoBoardUtil.h  GoGtpEngine.cpp  GoPlayer.cpp  GoPlayer.h  Makefile  Makefile.am  Makefile.in
go/.deps/: libfuego_go_a-GoAdditiveKnowledge.Po  libfuego_go_a-GoAutoBook.Po  libfuego_go_a-GoBensonSolver.Po  libfuego_go_a-GoBlock.Po  libfuego_go_a-GoBoard.Po  libfuego_go_a-GoBoardCheckPerformance.Po  libfuego_go_a-GoBoardHistory.Po  libfuego_go_a-GoBoardRestorer.Po  libfuego_go_a-GoBoardSynchronizer.Po  libfuego_go_a-GoBoardUpdater.Po  libfuego_go_a-GoBoardUtil.Po  libfuego_go_a-GoBook.Po  libfuego_go_a-GoChain.Po  libfuego_go_a-GoEyeCount.Po  libfuego_go_a-GoEyeUtil.Po  libfuego_go_a-GoGame.Po  libfuego_go_a-GoGtpCommandUtil.Po  libfuego_go_a-GoGtpEngine.Po  libfuego_go_a-GoGtpExtraCommands.Po  libfuego_go_a-GoInfluence.Po  libfuego_go_a-GoInit.Po  libfuego_go_a-GoKomi.Po  libfuego_go_a-GoLadder.Po  libfuego_go_a-GoMotive.Po  libfuego_go_a-GoNodeUtil.Po  libfuego_go_a-GoOpeningKnowledge.Po  libfuego_go_a-GoPattern12Point.Po  libfuego_go_a-GoPattern3x3.Po  libfuego_go_a-GoPatternBase.Po  libfuego_go_a-GoPlayer.Po  libfuego_go_a-GoPlayerMove.Po  libfuego_go_a-GoRegion.Po  libfuego_go_a-GoRegionBoard.Po  libfuego_go_a-GoRegionUtil.Po  libfuego_go_a-GoRules.Po  libfuego_go_a-GoSafetyCommands.Po  libfuego_go_a-GoSafetySolver.Po  libfuego_go_a-GoSafetyUtil.Po  libfuego_go_a-GoSearch.Po  libfuego_go_a-GoSetupUtil.Po  (+4 more)
godata/: Makefile  Makefile.am  Makefile.in  sgfreader  sgfreader.cpp  sgfreader.h
gouct/: GoUctBoard.h  GoUctCommands.cpp  GoUctFeatureKnowledge.cpp  GoUctGlobalSearch.h  GoUctObjectWithSearch.h  GoUctPlayer.h  GoUctPlayoutPolicy.h  GoUctPureRandomGenerator.h  GoUctSearch.cpp  GoUctSearch.h  Makefile  Makefile.am  Makefile.in
gouct/.deps/: libfuego_gouct_a-GoUctAdditiveKnowledgeFuego.Po  libfuego_gouct_a-GoUctAdditiveKnowledgeGreenpeep.Po  libfuego_gouct_a-GoUctAdditiveKnowledgeMultiple.Po  libfuego_gouct_a-GoUctBoard.Po  libfuego_gouct_a-GoUctCommands.Po  libfuego_gouct_a-GoUctDefaultMoveFilter.Po  libfuego_gouct_a-GoUctDefaultPriorKnowledge.Po  libfuego_gouct_a-GoUctEstimatorStat.Po  libfuego_gouct_a-GoUctFeatureCommands.Po  libfuego_gouct_a-GoUctFeatureKnowledge.Po  libfuego_gouct_a-GoUctFeatures.Po  libfuego_gouct_a-GoUctGlobalSearch.Po  libfuego_gouct_a-GoUctKnowledge.Po  libfuego_gouct_a-GoUctKnowledgeFactory.Po  libfuego_gouct_a-GoUctLadderKnowledge.Po  libfuego_gouct_a-GoUctMoveFilter.Po  libfuego_gouct_a-GoUctPatterns.Po  libfuego_gouct_a-GoUctPlayoutPolicy.Po  libfuego_gouct_a-GoUctSearch.Po  libfuego_gouct_a-GoUctUtil.Po
gtpengine/: Makefile  Makefile.am  Makefile.in
gtpengine/.deps/: libfuego_gtpengine_a-GtpEngine.Po  libfuego_gtpengine_a-GtpInputStream.Po  libfuego_gtpengine_a-GtpOutputStream.Po
include/mxnet-cpp/: op.h
misctests/: Makefile  Makefile.in
mxnet/: GoBoardTest  GoBoardTest.cpp  MXNetExtract  MXNetMain  MXNetMain.cpp  MXNetMain_training.cpp  MXNetModel.cpp  MXNetModel.h  Makefile  Makefile.am  Makefile.in  feature_extract.cpp
regression/: Makefile  Makefile.in
selfplay/: Makefile  Makefile.am  Makefile.in  SelfplayMain.cpp  SelfplayMain.h
simpleplayers/: Makefile  Makefile.in
simpleplayers/.deps/: libfuego_simpleplayers_a-SpAveragePlayer.Po  libfuego_simpleplayers_a-SpCapturePlayer.Po  libfuego_simpleplayers_a-SpDumbTacticalPlayer.Po  libfuego_simpleplayers_a-SpGreedyPlayer.Po  libfuego_simpleplayers_a-SpInfluencePlayer.Po  libfuego_simpleplayers_a-SpLadderPlayer.Po  libfuego_simpleplayers_a-SpLibertyPlayer.Po  libfuego_simpleplayers_a-SpMaxEyePlayer.Po  libfuego_simpleplayers_a-SpMinLibPlayer.Po  libfuego_simpleplayers_a-SpMoveGenerator.Po  libfuego_simpleplayers_a-SpRandomPlayer.Po  libfuego_simpleplayers_a-SpSafePlayer.Po  libfuego_simpleplayers_a-SpSimplePlayer.Po  libfuego_simpleplayers_a-SpUtil.Po
smartgame/: Makefile  Makefile.am  Makefile.in  SgBlackWhite.h  SgConfig.h  SgDebug.cpp  SgDebug.h  SgPoint.h  SgTimer.h  SgUctSearch.cpp  SgUctSearch.h  SgUctTree.cpp  SgUctTree.h  SgUctValue.h
smartgame/.deps/: libfuego_smartgame_a-SgBoardConst.Po  libfuego_smartgame_a-SgBookBuilder.Po  libfuego_smartgame_a-SgCmdLineOpt.Po  libfuego_smartgame_a-SgConnCompIterator.Po  libfuego_smartgame_a-SgDebug.Po  libfuego_smartgame_a-SgDfpnSearch.Po  libfuego_smartgame_a-SgEvaluatedMoves.Po  libfuego_smartgame_a-SgException.Po  libfuego_smartgame_a-SgFastLog.Po  libfuego_smartgame_a-SgGameReader.Po  libfuego_smartgame_a-SgGameWriter.Po  libfuego_smartgame_a-SgGtpClient.Po  libfuego_smartgame_a-SgGtpCommands.Po  libfuego_smartgame_a-SgGtpUtil.Po  libfuego_smartgame_a-SgIncrementalStack.Po  libfuego_smartgame_a-SgInit.Po  libfuego_smartgame_a-SgMemCheck.Po  libfuego_smartgame_a-SgMiaiMap.Po  libfuego_smartgame_a-SgMiaiStrategy.Po  libfuego_smartgame_a-SgMpiSynchronizer.Po  libfuego_smartgame_a-SgNbIterator.Po  libfuego_smartgame_a-SgNode.Po  libfuego_smartgame_a-SgNodeUtil.Po  libfuego_smartgame_a-SgPlatform.Po  libfuego_smartgame_a-SgPoint.Po  libfuego_smartgame_a-SgPointSet.Po  (+22 more)
unittestmain/: Makefile  Makefile.in
